# joychord

./: .geminiignore  .gitattributes  .gitignore  CMakeLists.txt  build_log.txt  cmake_build5.txt  cmake_build_final.txt  cmake_build_log.txt  cmake_config2.txt  cmake_config3.txt  cmake_config4.txt  cmake_config5.txt  cmake_config_final.txt  cmake_log.txt  sfizz_build.txt  sfizz_build2.txt  test.cpp
Source/Engine/: ButtonRoleMap.cpp  ButtonRoleMap.h  ChordEngine.cpp  ChordEngine.h  ModulationRouter.cpp  ModulationRouter.h  StrumEngine.cpp  StrumEngine.h
Source/Input/: GamepadInput.h  XInputGamepad.cpp  XInputGamepad.h
Source/Plugin/: AxisDrawer.h  EffectsDrawer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthDrawer.h
Source/Synth/: GhostmoonVoice.h  SimpleVoice.h
Source/UI/GhostmoonUI/: DarkMetallicTheme.h  Knob.h  KnobStyles.cpp  KnobStyles.h  KnobStylesBipolar.cpp  KnobStylesBipolar.h  KnobStylesEncoder.cpp  KnobStylesEncoder.h  KnobStylesStandard.cpp  KnobStylesStandard.h  KnobStylesStepped.cpp  KnobStylesStepped.h  LEDMeter.h  Typography.h
Tests/: ChordEngineTests.cpp
assets/: basic_sine.sfz
docs/: ARCHITECTURE.md  CHANGELOG.md  HOWTO.md  README.md  ROADMAP.md  STATE.md
scripts/: download_assets.ps1
